[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cumulus-geoproc"
dynamic = ["version"]
description = "Implementation processing incoming grids to Cloud Optimized GeoTIFF (COG)"
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
dependencies = [
    "httpx",
    "httpx[http2]",
    "boto3",
    "botocore",
    "celery",
    "pyplugs",
    "netCDF4",
    "requests",
    "GDAL[numpy]>=3.9.1",
    "psycopg2-binary",
    "pyresample",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cumulus_geoproc = ["geoprocess/snodas/data/*"]
